--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "glm"]
 	path = lib/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "stb"]
+	path = lib/stb
+	url = https://github.com/nothings/stb.git
