add openal-soft and freealut as submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "stb"]
 	path = lib/stb
 	url = https://github.com/nothings/stb.git
+[submodule "lib/openal-soft"]
+	path = lib/openal-soft
+	url = https://github.com/kcat/openal-soft.git
+[submodule "lib/freealut"]
+	path = lib/freealut
+	url = https://github.com/vancegroup/freealut.git
